# MarketMind-yHack26

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  plan.MD  plan.md  requirements.txt
agent/: .env.example  loop.py  polymarket_example.py  trader.py
backend/: .dockerignore  .env.example  AGENTIC_SYSTEM.md  Dockerfile  app.py  backend.MD  backend.md  db.py  demo_k2_agent.py  homepage_markets_export.xlsx  package-lock.json  pyproject.toml  requirements.txt  sample_markets_ml.xlsx  test_fallback.py
backend/app/: __init__.py  config.py
backend/app/agent/: loop.py  signal.py
backend/app/db/: mongo.py  postgres.py
backend/app/repositories/: __init__.py  homepage_markets.py  market_research.py  polymarket_markets.py
backend/app/routes/: agent.py  analyze.py  clob.py  homepage.py  ingest.py  k2.py  markets.py  payoff.py  thesis.py  trade.py
backend/app/services/: analyze.py  auth.py  payoff.py  polymarket.py  polymarket_gamma.py  research_context.py  sentiment_signal.py  tavily.py  thesis_parse.py
backend/app/services/llm/: gemini.py  hermes.py  k2.py  k2_agent.py
backend/scripts/: export_homepage_markets_xlsx.py  export_sample_markets_xlsx.py  polymarket_markets_count.py
backend/services/: trader.py
backend/tests/: test_combined_integration.py  test_gemini_integration.py  test_k2_integration.py  test_polymarket_integration.py  test_tavily_integration.py
data/: build_resolved_eval_dataset.py  gemini_eval_records.csv  gemini_eval_records_test2.csv  gemini_eval_results.json  gemini_eval_results_test2.json  (+4 more)
(+42 files in other folders)
